Added dark mode and made it the default

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 
+    <!-- Personal stylesheet-->
+    <link rel="stylesheet" href="stylesheet.css">
+
 </head>
 
 <body>
     <main class="wrapper">
         <nav class="navigation">
+            <br>
             <section class="container">
                 <a class="navigation-title">Rebellion Probe Tracker</h3>
                     <a class="button button-outline float-right" href="#" onclick="refreshSystems()" data-popover="">Reset Systems</a>
