--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <head>
+    <title>Probe Tracker</title>
     <meta charset="utf-8">
+    <meta name="description" content="Simple Star Wars Rebellion board game probe tracker. Hosted on github to tick off each system as the Empire player.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -29,7 +31,7 @@
     <main class="wrapper">
         <nav class="navigation">
             <section class="container">
-                <a class="navigation-title">Probe Tracker</h3>
+                <a class="navigation-title" href="#">Probe Tracker</h3>
                     <ul class="navigation-list float-right">
                         <li class="navigation-item float-right">
                             <a class="navigation-link" href="#" onclick="refreshSystems()" data-popover="">Reset
