--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
     <title>Probe Tracker</title>
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="manifest" href="icons/site.webmanifest">
+    <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -34,8 +34,7 @@
                 <a class="navigation-title" href="#">Probe Tracker</h3>
                     <ul class="navigation-list float-right">
                         <li class="navigation-item float-right">
-                            <a class="navigation-link" href="#" onclick="refreshSystems()" data-popover="">Reset
-                                Systems</a>
+                            <a class="navigation-link" href="#" onclick="refreshSystems()" data-popover="">ResetSystems</a>
                         </li>
                         <li class="navigation-item float-right">
                             <a class="navigation-link" href="#" onclick="undo()" data-popover="">Undo</a>
@@ -85,3 +84,4 @@
         </section>
     </main>
 </body>
+</html>
