Improved navbar backend

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
             <section class="container">
                 <a class="navigation-title" href="#">Probe Tracker</h3>
                     <ul class="navigation-list float-right">
-                        <li class="navigation-item float-right">
+                        <li class="navigation-item float-right" href="#" onclick="refreshSystems()" data-popover="">Reset Systems</li>
+                        <li class="navigation-item float-right" href="#" onclick="undo()" data-popover="">Undo</li>
+                        <!--<li class="navigation-item float-right">
                             <a class="navigation-link" href="#" onclick="refreshSystems()" data-popover="">ResetSystems</a>
                         </li>
                         <li class="navigation-item float-right">
                             <a class="navigation-link" href="#" onclick="undo()" data-popover="">Undo</a>
-                        </li>
+                        </li>-->
                     </ul>
             </section>
         </nav>
