--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <section class="container">
                 <a class="navigation-title" href="#">Probe Tracker</a>
                 <ul class="navigation-list float-right">
-                    <li class="navigation-item float-right" href="#" onclick="refreshSystems()" data-popover="">Reset
+                    <li class="navigation-item navigation-link float-right" href="#" onclick="refreshSystems()" data-popover="">Reset
                         Systems</li>
-                    <li class="navigation-item float-right" href="#" onclick="undo()" data-popover="">Undo</li>
+                    <li class="navigation-item navigation-link float-right" href="#" onclick="undo()" data-popover="">Undo</li>
                     <!--<li class="navigation-item float-right">
                             <a class="navigation-link" href="#" onclick="refreshSystems()" data-popover="">ResetSystems</a>
                         </li>
