Moved the probe tracker to misc

--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -36,16 +36,10 @@
         <nav class="navigation">
             <section class="container">
                 <a class="navigation-title" href="#">Probe Tracker</a>
-                <ul class="navigation-list float-right">
+                <ul class="navigation-list float-right" style="margin-right: 0px;">
                     <li class="navigation-item navigation-link float-right" href="#" onclick="refreshSystems()" data-popover="">Reset
                         Systems</li>
                     <li class="navigation-item navigation-link float-right" href="#" onclick="undo()" data-popover="">Undo</li>
-                    <!--<li class="navigation-item float-right">
-                            <a class="navigation-link" href="#" onclick="refreshSystems()" data-popover="">ResetSystems</a>
-                        </li>
-                        <li class="navigation-item float-right">
-                            <a class="navigation-link" href="#" onclick="undo()" data-popover="">Undo</a>
-                        </li>-->
                 </ul>
             </section>
         </nav>
