--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -64,7 +64,7 @@
                         }
                         for (var i = 0; i < fullList.length; i++)
                             if (shownListItems[i])
-                                target.innerHTML += '<dt id="' + i + '"><p class="float-left">' + fullList[i] + '</p><button class="button float-right" onclick="removeSystem(' + i + ')">Probe System</button><br><hr></dt>';
+                                target.innerHTML += '<dt id="' + i + '"><p class="float-left">' + fullList[i] + '</p><button class="button float-right" onclick="removeSystem(' + i + ')">Probe System</button></dt>';
                     }
 
                     function undo() {
