--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script scr="/register-sw.js"></script>
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-
     <!-- CSS Reset -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 
     <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
@@ -29,6 +29,7 @@
     <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
@@ -37,7 +38,7 @@
             <section class="container">
                 <a class="navigation-title hidden-mobile" href="#">Probe Tracker</a>
                 <ul class="navigation-list float-right" style="margin-right: 0px;">
-                    <li class="navigation-item navigation-link float-right" href="#" onclick="changeSort()" data-popover="" id="sortText">Alphabet Sort</li>
+                    <li class="navigation-item navigation-link float-right" href="#" onclick="changeSort()" data-popover="" id="sortText">Region Sort</li>
                     <li class="navigation-item navigation-link float-right" href="#" onclick="refreshSystems()" data-popover="">Reset
                         Systems</li>
                     <li class="navigation-item navigation-link float-right" href="#" onclick="undo()" data-popover="">Undo</li>
@@ -46,96 +47,11 @@
         </nav>
         <section class="container">
             <dl id="SystemList">
-                <script>
-// Finds the target to add list items
-var target = document.getElementById("SystemList");
-const sort = document.getElementById('sortText');
-// Generates the full list of systems as a list of strings
-const fullList = ["Alderaan", "Bespin", "Bothawui", "Cato Neimoidia", "Corellia",
- "Dagobah", "Dantooine", "Dathomir", "Endor", "Feluica", "Geonosis", "Hoth",
-  "Ilum", "Kashyyk", "Kessel", "Malastare", "Mandalore", "Mon Calamari", "Mustafar",
-   "Mygeeto", "Naboo", "Nal Hutta", "Ord Mantell", "Rodia", "Ryloth", "Saleucami",
-    "Sullust", "Tatooine", "Toydaria", "Utapau", "Yavin"];
-const fullListRegions = [7,8,2,7,7,
-5,6,4,8,1,3,8,
-6,4,2,4,4,1,8,
-6,5,2,6,3,3,1,
-5,3,2,5,1]
-var shownListItems = [];
-var probeHistory = [];
-var regionSort = false;
-refreshSystems(true);
-
-function changeSort() {
-    regionSort = !regionSort;//Swap sorting system
-    refresh();
-}
-
-function refresh(){
-    target.innerHTML = "";
-    if (regionSort) {
-        sortedRefresh(false);//If here region sort is enabled
-        sort.innerText = "Region Sort"
-    } else {
-        alphabetRefresh();// Not full refresh
-        sort.innerText = "Alphabet Sort"
-    }
-}
-
-function alphabetRefresh(){
-    for (var i = 0; i < fullList.length; i++)
-        if (shownListItems[i])
-            target.innerHTML += '<dt id="' + i + '"><p class="float-left">' + fullList[i] + '</p><button class="button float-right" onclick="removeSystem(' + i + ')">Probe System</button></dt>';
-}
-
-function sortedRefresh(fullRefresh = true) {
-    if (fullRefresh)
-        fullRefreshList();
-    for (var region = 1; region <= 8; region++) {
-        var notProbed = 0;
-        for (var i = 0; i < fullList.length; i++)
-            if (fullListRegions[i] == region)
-                if (shownListItems[i]) notProbed++;
-        if (notProbed == 0) continue;
-        target.innerHTML += '<dt id="imgBox"><img src="Images/region' + region + '.png" width="100%"/></dt>';
-        for (var i = 0; i < fullList.length; i++)
-            if (fullListRegions[i] == region && shownListItems[i])
-                target.innerHTML += '<dt id="' + i + '"><p class="float-left">' + fullList[i] + '</p><button class="button float-right" onclick="removeSystem(' + i + ')">Probe System</button><br></dt>';
-    }
-}
-
-function fullRefreshList() {
-    shownListItems = [];
-    probeHistory = [];
-    for (var i = 0; i < fullList.length; i++)
-        shownListItems.push(true);
-}
-
-
-function refreshSystems(fullRefresh = true) {
-    if (fullRefresh) 
-        fullRefreshList();
-    refresh();
-}
-
-function undo() {
-    if (probeHistory.length == 0) return;
-    var i = probeHistory[probeHistory.length - 1];
-    probeHistory.pop();
-    shownListItems[i] = true;
-    refresh();
-    //refreshSystems(false);//Don't do a full refresh
-}
-
-function removeSystem(systemI) {
-    shownListItems[systemI] = false;//Sets this to false to stop it from being displayed
-    probeHistory.push(systemI);//Adds the removed systems to history.
-    refresh();
-    //refreshSystems(false);
-}
-                </script>
+            </dl>
+            <dl id="SubjugatedSystemList">
             </dl>
         </section>
+        <script src="systems.js"></script>
     </main>
 </body>
 
