added js script

--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -8,7 +8,7 @@
         content="Simple Star Wars Rebellion board game probe tracker. Hosted on github to tick off each system as the Empire player.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script scr="/register-sw.js"></script>
+    <script scr="register-sw.js"></script>
     <!-- CSS Reset -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 
@@ -51,7 +51,7 @@
             <dl id="SubjugatedSystemList">
             </dl>
         </section>
-        <script src="systems.js"></script>
+        <script src="js/systems.js"></script>
     </main>
 </body>
 
