Updated readme and improved meta tags for twitter and facebook

--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -2,11 +2,28 @@
 <html lang="en">
 
 <head>
+    <!-- Primary Meta Tags -->
     <title>Probe Tracker</title>
+    <meta name="title" content="Probe Tracker">
+    <meta name="description" content="Simple Star Wars Rebellion board game probe tracker. Hosted on github to tick off each system as the Empire player.">
+
     <meta charset="utf-8">
-    <meta name="description"
-        content="Simple Star Wars Rebellion board game probe tracker. Hosted on github to tick off each system as the Empire player.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="">
+    <meta property="og:url" content="https://jamiemctaggart.com/misc/probe-tracker/">
+    <meta property="og:title" content="Probe Tracker">
+    <meta property="og:description" content="Simple Star Wars Rebellion board game probe tracker. Hosted on github to tick off each system as the Empire player.">
+    <meta property="og:image" content="icons/android-chrome-512x512.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://jamiemctaggart.com/misc/probe-tracker/">
+    <meta property="twitter:title" content="Probe Tracker">
+    <meta property="twitter:description" content="Simple Star Wars Rebellion board game probe tracker. Hosted on github to tick off each system as the Empire player.">
+    <meta property="twitter:image" content="icons/android-chrome-512x512.png">
+
 
     <script scr="register-sw.js"></script>
     <!-- CSS Reset -->
