--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -55,7 +55,7 @@
             <section class="container">
                 <a class="navigation-title hidden-mobile" href="#">Probe Tracker</a>
                 <ul class="navigation-list float-right" style="margin-right: 0px;">
-                    <li class="navigation-item navigation-link float-right" href="#" onclick="changeSort(1)" data-popover="" id="sortText">Region Sort</li>
+                    <li class="navigation-item navigation-link float-right" href="#" onclick="" data-popover="" id="sortText">Alphabet Sort</li>
                     <li class="navigation-item navigation-link float-right" href="#" onclick="refreshSystems()" data-popover="">Reset
                         Systems</li>
                     <li class="navigation-item navigation-link float-right" href="#" onclick="undo()" data-popover="">Undo</li>
@@ -63,12 +63,17 @@
             </section>
         </nav>
         <section class="container">
+            <dl id="secondNav">
+                <dt>
+                    <button class="button float-centre" onclick="changeSort(0)">Alphabet Sort</button>
+                    <button class="button float-centre" onclick="changeSort(1)">Region Sort</button>
+                    <button class="button float-centre" onclick="changeSort(2)">Conquer Sort</button>
+                    <button class="button float-centre" onclick="changeSort(3)">Risk Sort</button>
+                </dt>
+            </dl>
             <dl id="SystemList">
             </dl>
             <dl id="SubjugatedSystemList">
-            </dl>
-            <dl id="Additional Options">
-                <dt><button class="button float-centre" onclick="ConquerSort()">Conquer Sort</button><button class="button float-centre" onclick="RiskSort()">Risk Sort</button></dt>
             </dl>
         </section>
         <script src="js/systems.js"></script>
