small QOL imporvement - The sort buttons now display which sort is currently active by a change in colour

--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -65,10 +65,10 @@
         <section class="container">
             <dl id="secondNav">
                 <dt>
-                    <button class="button float-centre" onclick="changeSort(0)">Alphabet Sort</button>
-                    <button class="button float-centre" onclick="changeSort(1)">Region Sort</button>
-                    <button class="button float-centre" onclick="changeSort(2)">Conquer Sort</button>
-                    <button class="button float-centre" onclick="changeSort(3)">Risk Sort</button>
+                    <button class="sortButton button float-centre active" id="alphabet" onclick="changeSort(0)">Alphabet Sort</button>
+                    <button class="sortButton button float-centre" id="region" onclick="changeSort(1)">Region Sort</button>
+                    <button class="sortButton button float-centre" id="conquer" onclick="changeSort(2)">Conquer Sort</button>
+                    <button class="sortButton button float-centre" id="risk" onclick="changeSort(3)">Risk Sort</button>
                 </dt>
             </dl>
             <dl id="SystemList">
