Added notification for loading list

--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -71,6 +71,7 @@
                     <button class="sortButton button float-centre" id="risk" onclick="changeSort(3)">Risk Sort</button>
                 </dt>
             </dl>
+            <div id="notification" class="notification"></div>
             <dl id="SystemList">
             </dl>
             <dl id="SubjugatedSystemList">
