Small change to seo

--- a/misc/time-to-oppenheimer/index.html
+++ b/misc/time-to-oppenheimer/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Countdown</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="title" content="Countdown to Oppenheimer">
+    <meta name="description" content="A simple countdown to the release of the movie Oppenheimer">
+
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="">
+    <meta property="og:url" content="https://jamiemctaggart.com/misc/countdown-to-oppenheimer/">
+    <meta property="og:title" content="Countdown to Oppenheimer">
+    <meta property="og:description" content="A simple countdown to the release of the movie Oppenheimer">
+    <!--<meta property="og:image" content="icons/android-chrome-512x512.png">-->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://jamiemctaggart.com/misc/probe-tracker/">
+    <meta property="twitter:title" content="Countdown to Oppenheimer">
+    <meta property="twitter:description" content="A simple countdown to the release of the movie Oppenheimer">
+    <!--<meta property="twitter:image" content="icons/android-chrome-512x512.png">-->
 </head>
 <body>
     <h1>Countdown to Oppenheimer</h1>
