--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-90316067-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3NEPKSMJG5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
