small fix again

--- a/misc/probe-tracker/index.html
+++ b/misc/probe-tracker/index.html
@@ -55,7 +55,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-PPXYY4SZ0C');
+  gtag('config', 'G-3NEPKSMJG5');
 </script>
     <main class="wrapper">
         <nav class="navigation">
